Fix Menu Block breaking out of parent

--- a/Lighthouse_2/SelectPoints.html
+++ b/Lighthouse_2/SelectPoints.html
@@ -26,7 +26,7 @@
       <div class="is-block" id="SelectPoints_menu_block">
         <input class="input font_m" id="SelectPoints_room_query">
         <div class="menu">
-          <ul class="menu-list" id="SelectPoints_room_query_results" style="max-height: 10%;">
+          <ul class="menu-list" id="SelectPoints_room_query_results" style="max-height: 100px; overflow: auto;">
           </ul>
         </div>
       </div>
