Substitute ID with Emoji, Allow display as fullscreen app

--- a/Lighthouse_2/ShowID.html
+++ b/Lighthouse_2/ShowID.html
@@ -4,7 +4,7 @@
     <div class="box columns p-2 m-2 is-mobile">
       <div class="column is-two-thirds is-size-2 font_j" id="ShowID_assigned_id">
       </div>
-      <div class="column is-one-third has-background-primary" id="ShowID_assigned_color">
+      <div class="column is-one-third has-background-primary" id="ShowID_assigned_color" style="border-radius: 15px">
       </div>
     </div>
     
