--- a/Lighthouse_2/signage.html
+++ b/Lighthouse_2/signage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <title>Lighthouse Navigator</title>
 
   <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.3/css/bulma.css">
